--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "saifrashed",
   "version": "0.1.0",
-  "private": true,
+  "engines": {
+    "node": "12.16.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
