--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@graphcms/rich-text-react-renderer": "^0.3.2",
     "@next/mdx": "^11.0.1",
     "chakra-ui-markdown-renderer": "^3.0.1",
     "framer-motion": "^3.10.3",
@@ -32,9 +33,6 @@
     "react-player": "^2.9.0",
     "react-tweet-embed": "^1.2.2",
     "reading-time": "^1.4.0",
-    "remark-autolink-headings": "^6.0.1",
-    "remark-code-titles": "^0.1.1",
-    "remark-slug": "^6.0.0",
     "sort-isostring": "^1.0.0",
     "timeago.js": "^4.0.2",
     "use-sound": "^4.0.1"
