--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "react-tweet-embed": "^1.2.2",
