Complete overhaul and minimalistic approach

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.1.5",
     "@graphcms/rich-text-react-renderer": "^0.3.2",
     "@next/mdx": "^11.0.1",
+    "@radix-ui/colors": "^0.1.8",
     "chakra-ui-markdown-renderer": "^3.0.1",
     "framer-motion": "^3.10.3",
     "graphql": "^15.5.1",
@@ -33,6 +34,7 @@
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "react-tweet-embed": "^1.2.2",
+    "react-vertical-timeline-component": "^3.5.2",
     "reading-time": "^1.4.0",
     "sort-isostring": "^1.0.0",
     "timeago.js": "^4.0.2",
