--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "saifrashed",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm install && npm run build"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
     "@radix-ui/colors": "^0.1.8",
-    "heroicons-react": "^1.4.1",
     "next": "10.0.8",
     "next-seo": "^4.26.0",
-    "phosphor-react": "^1.3.1",
-    "prism-react-renderer": "^1.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
-    "sort-isostring": "^1.0.0",
-    "timeago.js": "^4.0.2",
-    "use-sound": "^4.0.1"
+    "timeago.js": "^4.0.2"
   }
 }
