--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.3.4",
-    "@emotion/react": "^11.1.5",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.3",
+    "@emotion/react": "^11.10.6",
     "@radix-ui/colors": "^0.1.8",
-    "next": "10.0.8",
-    "next-seo": "^4.26.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-ga": "^3.3.0",
-    "react-icons": "^4.2.0",
+    "next": "^13.2.4",
+    "next-seo": "^5.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
+    "react-icons": "^4.8.0",
     "timeago.js": "^4.0.2"
   }
 }
